SERVICE PAGE EDITS

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=EB+Garamond&family=Parisienne&family=Pacifico&display=swap"
+    href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=EB+Garamond&family=Parisienne&family=Pacifico&family=Merriweather&display=swap"
     rel="stylesheet">
 </head>
 
