--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/e8bd13e220.js" crossorigin="anonymous"></script>
-  <title>React App</title>
+  <title>Beauty by Belle</title>
 
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
